# ImmoScout

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  llms.txt  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  publish.yml  tests.yml
docs/: api.md  guide.md  index.md  mcp.md
examples/: advanced_search.py  basic_usage.py  filters_and_pagination.py  get_expose.py  get_expose_details.py  pagination.py  search.py  search_houses.py
immoscout/: __init__.py  cli.py  client.py  exceptions.py  filters.py  mcp_server.py  models.py
tests/: test_client.py  test_filters.py  test_models.py
